--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,33 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-async-timeout==4.0.2
+aiohttp==3.7.4.post0
+asttokens==2.0.5
+async-timeout==3.0.1
 attrs==21.4.0
-charset-normalizer==2.0.12
-dis-snek==6.0.0
-frozenlist==1.3.0
+backcall==0.2.0
+black==22.1.0
+chardet==4.0.0
+click==8.0.3
+decorator==5.1.1
+executing==0.8.2
 idna==3.3
+ipython==8.0.1
+jedi==0.18.1
+matplotlib-inline==0.1.3
 multidict==6.0.2
+mypy-extensions==0.4.3
+parso==0.8.3
+pathspec==0.9.0
+pexpect==4.8.0
+pickleshare==0.7.5
+platformdirs==2.5.0
+prompt-toolkit==3.0.28
+ptyprocess==0.7.0
+pure-eval==0.2.2
+py-cord==2.0.0b4
+Pygments==2.11.2
+six==1.16.0
+stack-data==0.2.0
 tomli==2.0.1
+traitlets==5.1.1
+typing_extensions==4.1.1
+wcwidth==0.2.5
 yarl==1.7.2
